js/src/tests/test262/built-ins/Error/prop-desc.js
verifyNotEnumerable
(
this
"
Error
"
)
;
verifyWritable
(
this
"
Error
"
)
;
verifyConfigurable
(
this
"
Error
"
)
;
reportCompare
(
0
0
)
;
